# tapclash

./: .env.example  .env.production  .gitignore  App.tsx  COORDINATION.md  DEPLOY.md  LICENSE  PRIVACY.md  README.md  app.json  eas.json  globals.ts  index.ts  package-lock.json  package.json  tsconfig.json
android/: gradle.properties  keystore.properties.example  settings.gradle
android/app/: build.gradle
components/: BackgroundField.tsx  Burst.tsx  Button.tsx  Hud.tsx  Target.tsx
constants/: categories.ts  config.ts  game.ts
context/: SeasonContext.tsx  WalletContext.tsx
docs/: copyright.html  index.html  privacy.html
hooks/: usePoolSeason.ts  useSeedVault.ts  useSubmitScore.ts  useTapGame.ts
programs/: .gitignore  .program-id  Anchor.toml  Cargo.toml  README.md
programs/tapclash_pools/: Cargo.toml
programs/tapclash_pools/src/: lib.rs
publishing/: README.md  config.yaml
publishing/media/: .gitkeep
screens/: LeaderboardScreen.tsx  PlayScreen.tsx  ProfileScreen.tsx  SeasonScreen.tsx
scripts/: gen_assets.py
sdk/: README.md  package-lock.json  package.json  tsconfig.json
sdk/idl/: tapclash_pools.json
sdk/oracle/: README.md  e2e-devnet.ts  oracle.ts
sdk/src/: accounts.ts  borsh.ts  claim.ts  index.ts  instructions.ts  program.ts  types.ts
sdk/test/: pools.litesvm.test.ts
server/: .gitignore  README.md  legacy-stub.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
server/docs/: CATEGORIES_SPEC.md
services/: leaderboard.ts  pendingScores.ts  pools.ts  stats.ts
utils/: nonce.ts  season.ts
(+9 files in other folders)
