[package]
name = "tapclash_pools"
version = "0.1.0"
description = "TapClash v2 paid-pool season escrow (entry fees → top-N payout)"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "tapclash_pools"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
